--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -90,6 +90,18 @@
       </div>
     </div>
 
+    <div class="cards">
+      <div class="imgbox d-flex justify-content-center align-items-center">
+        <i class="fa-solid fa-people-group"></i>
+      </div>
+
+      <div class="content">
+        <h3 class="modulo-title">MÓDULO 6</h3>
+        <p>Educación Financiera I</p>
+        <a routerLink="/inicio/modulo-seis">Ver Módulo</a>
+      </div>
+    </div>
+
   </div>
 </section>
 <!--END CARDS MODULOS-->
